# BABAPPAlign

./: .gitignore  INSTALL.md  LICENSE  README.md  bali_score_py_v4.py  benchmark_msa_engine.py  combined.txt  compare_babappalign_vs_mafft.py  copy_content.py  out.fasta  pyproject.toml  sanity_adversarial_babappalign.py  sanity_check_babappalign.py  sanity_validate_babappalign.py  setup.py  test.fasta
adversarial_runs/: gap_heavy.fasta  internal_gaps.baba.aln  internal_gaps.fasta  low_complexity.baba.aln  profile_growth.fasta  random_divergent.baba.aln  random_divergent.fasta  single_mismatch.fasta  terminal_indels.baba.aln  terminal_indels.fasta
babappalign/: __init__.py  all_python_files.txt  babappalign.py  babappascore.py  cli.py  embeddings.py  pairwise_model.py
babappalign.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
compare_runs/: all_gap_bait.baba.aln  extreme_length.baba.aln  extreme_length.fasta  gap_storm.baba.aln  gap_storm.fasta  gap_storm.mafft.aln  identity.fasta  internal_gaps.mafft.aln  length_imbalance.baba.aln  low_complexity.baba.aln  low_complexity.fasta  low_complexity.mafft.aln  motif_shift.baba.aln  near_identity_noise.mafft.aln  random_divergent.baba.aln  random_divergent.fasta  random_divergent.mafft.aln  random_null.baba.aln  random_null.fasta  random_null.mafft.aln  repeat_phase.baba.aln  repeat_phase.fasta  repeat_phase.mafft.aln  scrambled.baba.aln  scrambled.fasta  scrambled.mafft.aln  single_anchor.fasta  single_anchor.mafft.aln  ultrarobust_comparison.tsv
conda/: meta.yaml
models/: meta.yaml
(+3 files in other folders)
